--- a/cosmos/uni_app/templates/many.html
+++ b/cosmos/uni_app/templates/many.html
@@ -17,6 +17,11 @@
             </div>
         </div>
         {% endfor %}
-    </div>  
+    </div>
+    <section class="clear text-center mt-2">
+        {% if result.has_previous %}<a class="fs-1 links" href="?page={{ result.previous_page_number }}"><i class="fa-solid fa-arrow-left"></i></a>{% endif %}
+        <span class="mx-4"></span>
+        {% if result.has_next %}<a class="fs-1 links" href="?page={{ result.next_page_number }}"><i class="fa-solid fa-arrow-right"></i></a>{% endif %}
+    </section>
 
 {% endblock %}
