Start contact_app

--- a/cosmos/uni_app/templates/compare.html
+++ b/cosmos/uni_app/templates/compare.html
@@ -60,7 +60,7 @@
     
     <div class="col-6">
         <div class="card">
-            <div class="card-header bg-cream">
+            <div class="card-header bg-cream" style="border-left: 1.5rem double {{i.cat.color}};">
                 <h2 class="title mb-0">{{ i.name }}</h2>
             </div>
             <div class="card-body">
