--- a/cosmos/static/owncss/common.css
+++ b/cosmos/static/owncss/common.css
@@ -35,6 +35,7 @@ body {font-family: 'Garet', sans-serif; font-size: larger;}
 /* --- BTN TYPES --- */
 .btn-styles{background-color: #5A0000; color: white; border: none; border-radius: 1rem;}
 .btn-styles:hover{background-color: #8d1515; color: white;}
+.btn-cream{background-color: #EEEAE1; border: none;}
 .btn-counter{background-color: white; color: black; border: none; border-radius: 1rem;}
 .btn-counter:hover{background-color: whitesmoke; color: black; border: none; border-radius: 1rem;}
 .btn-circle {
