--- a/cosmos/uni_app/templates/home.html
+++ b/cosmos/uni_app/templates/home.html
@@ -33,7 +33,7 @@
     <div class="col-3 mb-4 card h-100">
         <div class="card-body">
             <a href="{% url 'main:search' %}" class="card-title text-center no-line fs-1 fw-bold color-reddish">Carreras</a>
-            <p class="card-text fs-6">Explora las distintas opciones de carreras universitarias y descubre cuál se ajusta a tu vocación y metas profesionales.</p>
+            <p class="card-text fs-6">Explora entre las distintas opciones de carreras universitarias o terciarias y descubre cuál se ajusta a tu vocación y metas profesionales.</p>
         </div>
     </div>
     <div class="col-3 mb-4 card h-100 mx-4">    
