--- a/cosmos/uni_app/templates/many.html
+++ b/cosmos/uni_app/templates/many.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}{% block title %}Cosmos - {{type}}{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: unis, cats & carreras -->
 
+    {% load static %}
+
     <h2 class="title fs-1 mb-4">{{type|upper}}</h2>
     
     <div class="row row-cols-4 g-4">
@@ -18,10 +20,11 @@
         </div>
         {% endfor %}
     </div>
+    
     <section class="clear text-center mt-2">
-        {% if result.has_previous %}<a class="fs-1 links" href="?page={{ result.previous_page_number }}"><i class="fa-solid fa-arrow-left"></i></a>{% endif %}
+        {% if result.has_previous %}<a class="fs-1 links" href="?page={{ result.previous_page_number }}"><img src="{% static 'svg/arrow-up-solid.svg' %}" style="width: 2rem; transform: rotate(-90deg);"></a>{% endif %}
         <span class="mx-4"></span>
-        {% if result.has_next %}<a class="fs-1 links" href="?page={{ result.next_page_number }}"><i class="fa-solid fa-arrow-right"></i></a>{% endif %}
+        {% if result.has_next %}<a class="fs-1 links" href="?page={{ result.next_page_number }}"><img src="{% static 'svg/arrow-up-solid.svg' %}" style="width: 2rem; transform: rotate(90deg);"></a>{% endif %}
     </section>
 
 {% endblock %}
