--- a/cosmos/uni_app/templates/search.html
+++ b/cosmos/uni_app/templates/search.html
@@ -34,7 +34,7 @@
             {% endif %}
         </div>
         
-        <div class="col-2 p-0">
+        <div class="col-2 p-0 sticky-col">
             {% include "widgets/filters.html" %}
         </div>
 
