--- a/cosmos/auth_app/templates/login.html
+++ b/cosmos/auth_app/templates/login.html
@@ -5,9 +5,9 @@
     <div class="card text-center" style="max-width: 100rem">
         <div class="row">
 
-            <div class="col-6">
+            <div class="col-6 d-flex flex-column justify-content-center">
                 {% load static %}
-              <img src="{% static 'img/login.jpg' %}" class="img-fluid h-100" alt="login">
+              <img src="{% static 'img/login.jpg' %}" class="img-fluid object-fit-contain" alt="login">
             </div>
 
             <div class="col-6">
