--- a/cosmos/contact_app/templates/contact.html
+++ b/cosmos/contact_app/templates/contact.html
@@ -2,12 +2,10 @@
 {% block content %}                          
 
 {%load static%}
+<h1 class="serif text-center my-5" style="font-size: 4rem;">Somos <span class="fst-italic">Cosmos</span></h1>
 <div class="video-container">
     <video class="video-background" src="{% static 'vid/contact.mp4' %}" autoplay loop muted playsinline></video>
     <div class="overlay"></div>
-    <div class="content text-center">
-        <h1 class="serif text-center my-5 text-white" style="font-size: 4rem;">Somos <span class="fst-italic">cosmos</span></h1>
-    </div>
 </div>
 
 {% endblock %}
