--- a/cosmos/auth_app/templates/signin.html
+++ b/cosmos/auth_app/templates/signin.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}Register{% endblock %}
+{% extends "base.html" %}{% block title %}Cosmos - Registrarse{% endblock %}
 {% block content %}                          
 
     <div>
