--- a/cosmos/contact_app/templates/contact.html
+++ b/cosmos/contact_app/templates/contact.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}Nosotros{% endblock %}
+{% extends "base.html" %}{% block title %}Cosmos - Nosotros{% endblock %}
 {% block content %}                          
 
 {%load static%}
