--- a/cosmos/uni_app/templates/individual_UNUSED/carrera.html
+++ b/cosmos/uni_app/templates/individual_UNUSED/carrera.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}{{carrera}}{% endblock %}
+{% extends "base.html" %}{% block title %}Cosmos - {{carrera}}{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: carrera -->
 
     <h1 class="title">{{carrera.name}}</h1> <br>
