--- a/cosmos/uni_app/templates/individual_UNUSED/curso.html
+++ b/cosmos/uni_app/templates/individual_UNUSED/curso.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}{{curso}}{% endblock %}
+{% extends "base.html" %}{% block title %}Cosmos - {{curso}}{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: carrera -->
 
     <h1 class="title">{{curso.name}}</h1> <br>
