--- a/cosmos/uni_app/templates/individual_UNUSED/uni.html
+++ b/cosmos/uni_app/templates/individual_UNUSED/uni.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}{{uni}}{% endblock %}
+{% extends "base.html" %}{% block title %}Cosmos - {{uni}}{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: unis, cats & carreras -->
 
     <h1 class="title">{{uni.name}}</h1> <br>
