--- a/cosmos/uni_app/templates/one.html
+++ b/cosmos/uni_app/templates/one.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}{{one}}{% endblock %}
+{% extends "base.html" %}{% block title %}Cosmos - {{one}}{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: carrera -->
 
     <h1 class="title">{{one.name}}</h1> <br>
