--- a/cosmos/uni_app/templates/search.html
+++ b/cosmos/uni_app/templates/search.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}Buscador{% endblock %}
+{% extends "base.html" %}{% block title %}Cosmos - Buscador{% endblock %}
 {% block content %}                                <!-- GETS FROM ctx: unis, cats, carreras & query -->
 
     {% load static %}
