--- a/cosmos/auth_app/templates/profile.html
+++ b/cosmos/auth_app/templates/profile.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Perfil{% endblock %}
+{% block title %}Cosmos - Perfil{% endblock %}
 
 {% block content %}                          
 
