--- a/cosmos/blog_app/templates/blog.html
+++ b/cosmos/blog_app/templates/blog.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}Foro{% endblock %}
+{% extends "base.html" %}{% block title %}Cosmos - Foro{% endblock %}
 {% block content %}                                <!-- GETS FROM ctx: unis, cats, carreras & query -->
 
     {% load static %}
