--- a/cosmos/blog_app/templates/make.html
+++ b/cosmos/blog_app/templates/make.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}Postear{% endblock %}
+{% extends "base.html" %}{% block title %}Cosmos - Postear{% endblock %}
 {% block content %}                                <!-- GETS FROM ctx: unis, cats, carreras & query -->
 
     {% load static %}
