--- a/cosmos/uni_app/templates/test.html
+++ b/cosmos/uni_app/templates/test.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}{{carrera}}{% endblock %}
+{% extends "base.html" %}{% block title %}Cosmos - {{carrera}}{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: carrera -->
 
 <div class="mt-5">
