--- a/cosmos/uni_app/templates/unis_UNUSED.html
+++ b/cosmos/uni_app/templates/unis_UNUSED.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}{% block title %}Universidades{% endblock %}
+{% extends "base.html" %}{% block title %}Cosmos - Universidades{% endblock %}
 {% block content %}                          <!-- GETS FROM ctx: unis, cats & carreras -->
 
     <h2 class="title fs-1 mb-4">UNIVERSIDADES</h2>
